# SPDX-FileCopyrightText: 2021 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

opam-version : "2.0"
name         : "ocaml-recovery-parser"
version      : "0.1"
synopsis     : "A simple fork of OCaml parser with support for error recovery"
maintainer   : "Serokell"
authors      : "Frédéric Bour"
license      : "MIT and LGPL-2.1-only and MPL-2.0"
homepage     : "https://github.com/serokell/ocaml-recovery-parser"
bug-reports  : "https://github.com/serokell/ocaml-recovery-parser/issues"
# If you change the dependencies, run `opam lock` in the root
depends      : ["dune" "base" "fix" "menhir"]
build        : [["dune" "build" "-p" name]]
