; Copyright (c) 2019 Frédéric Bour
; 
; SPDX-License-Identifier: MIT

(library 
 (name recovery_parser)
 (wrapped false)
 (libraries menhirLib))

(ocamllex raw_lexer)

(menhir 
 (flags --strict --inspection --unused-tokens --table --cmly)                   
 (modules raw_parser))

(rule
 (targets parser_recover.ml)
 (deps raw_parser.cmly)
 (action
  (with-stdout-to
   %{targets}
   (run ../menhir-recover/main.exe raw_parser.cmly))))
