; SPDX-FileCopyrightText: 2021 Serokell <https://serokell.io/>
; SPDX-License-Identifier: MPL-2.0
;
; Copyright (c) 2019 Frédéric Bour 
; SPDX-License-Identifier: MIT

(library 
 (name merlin_recovery)
 (public_name ocaml-recovery-parser)
 (wrapped true)
 (modules Merlin_recovery)
 (libraries menhirLib menhirSdk custom_compiler_libs))

(library
 (name recovery_parser)
 (wrapped false)
 (modules Raw_parser Raw_lexer Parser_recover)
 (libraries menhirLib custom_compiler_libs))

(library
 (name custom_compiler_libs)
 (public_name ocaml-recovery-parser.custom_compiler_libs)
 (wrapped true)
 (modules Ast_helper Asttypes Docstrings Longident Parsetree
          Pprintast  Syntaxerr Location))

(ocamllex raw_lexer)

(menhir 
 (flags --strict --inspection --unused-tokens --table --cmly)                   
 (modules raw_parser))

(rule
 (targets parser_recover.ml)
 (deps raw_parser.cmly)
 (action
  (with-stdout-to
   %{targets}
   (run ../menhir-recover/main.exe raw_parser.cmly))))
